Corrected social button alignment

--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -64,10 +64,6 @@ em {
     }
 }
 
-.fb-like {
-    line-height:0.75em;
-}
-
 
 footer {
     color: white;
